--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -23,6 +23,11 @@
     max-width: 773px;
 }
 
+#header__sign-in {
+    align-self: center;
+    margin-right: 30px;
+}
+
 .dashboard__header {
     height: 6.4rem;
     display: flex;
